week 6 curvature motion

--- a/week_06/lecture.ipynb
+++ b/week_06/lecture.ipynb
@@ -125,10 +125,7 @@
     "\\frac{\\partial \\nabla_y \\phi}{\\partial y} \n",
     "\\right )\\\\\n",
     "\\end{align}\n",
-    "$$\n",
-    "\n",
-    "\n",
-    "\n"
+    "$$"
    ]
   },
   {
@@ -163,8 +160,28 @@
     "\\kappa \\vec N &= - \\left ( \\text{div} \n",
     "\\left (\\frac{\\nabla \\phi}{|\\nabla \\phi|} \\right ) \\right )\n",
     "\\left ( \\frac{\\nabla \\phi}{|\\nabla \\phi|} \\right ) \\\\\n",
+    "\\kappa \\vec N &= \\frac{1}{|\\nabla \\phi|} \\left (\n",
+    "\\frac{\\partial \\nabla_x \\phi}{\\partial x} + \n",
+    "\\frac{\\partial \\nabla_y \\phi}{\\partial y} \\right ) \n",
+    "\\left ( \\frac{\\nabla \\phi}{|\\nabla \\phi|} \\right )\\\\\n",
     "\\end{align}\n",
     "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "$$\n",
+    "\\begin{align}\n",
+    "- \\phi_t &= < \\nabla \\phi, C_t > \\\\\n",
+    "&= < \\nabla \\phi, \\kappa \\vec N > \\\\\n",
+    "\\vec N &= - \\frac{\\nabla \\phi}{|\\nabla \\phi|} \\\\\n",
+    "\\kappa &= \\text{div} \\left ( \\frac{\\nabla \\phi}{|\\nabla \\phi|} \\right ) \\\\\n",
+    "\\end{align}\n",
+    "$$"
    ]
   },
   {
