--- a/week_08/homework_week_08.ipynb
+++ b/week_08/homework_week_08.ipynb
@@ -10,9 +10,11 @@
     "\n",
     "_March 2, 2016_\n",
     "\n",
+    "This assignment explores sparse coding.  It is from Duke Professor Guillermo Sapiro's 2016 Coursera class _\"Image and Video Processing from Mars to Hollywood with a Stop at the Hospital\"_.  \n",
+    "\n",
     "Sparse coding represents image patches as a linear combination of a small number of basis elements.  In this assignment we attempt to denoise an image using this technique.  \n",
     "\n",
-    "Here is an illustration of the system.  It is from Professor Guillermo Sapiro's 2016 Coursera class _\"Image and Video Processing from Mars to Hollywood with a Stop at the Hospital\"_.  Sorry, I'm not going to explain it.  You can watch the lectures for yourself.  They are available in clips 65 through 72 on this YouTube playlist:  https://www.youtube.com/playlist?list=PLIUoqCcJd2BjZxdnlyQNnpnF4NmPn_jOy\n",
+    "Here is an illustration provided by Dr. Sapiro.  Sorry, I'm not going to explain it.  You can watch the lectures for yourself.  They are available in clips 65 through 72 on this YouTube playlist:  https://www.youtube.com/playlist?list=PLIUoqCcJd2BjZxdnlyQNnpnF4NmPn_jOy\n",
     "\n",
     "<img src=\"sparse_coding.png\">"
    ]
@@ -879,7 +881,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
